# termux-mcp-server

./: .gitignore  README.md  diagnose.sh  do_wechat_task.py  fix_tmp_and_run.sh  pyproject.toml  run_wechat.sh  setup.sh  termux_mcp_server.py
